--- a/shared.css
+++ b/shared.css
@@ -59,7 +59,7 @@ body {
     width: 25px;
     height: 3px;
     margin: 5px auto;
-    background-color: #333;
+    background-color: #f1f1f1; /* Changed to a light color */
     transition: all 0.3s ease-in-out;
     border-radius: 2px;
 }
